v4.2.2: Fixes nav bar icons scaling too much on bigger monitors. Adds previous article link

--- a/main/src/index.css
+++ b/main/src/index.css
@@ -59,6 +59,7 @@ body {
 	width: auto;
 	height: 3.8vh;
 	min-height: 30px;
+	max-height: 42px;
 	margin: 2px 2px 2px 20px;
 }
 
@@ -119,11 +120,14 @@ body {
 	right: 0;
 	width: 100%;
 	height: 4vh;
+	max-height: 42px;
 	outline: 0;
 	border: 0;
 	display: none;
 	font-size: 0.9rem;
 	border-radius: 7px;
+	top: 50%;
+	transform: translateY(-50%);
 	padding: 0 20px;
 }
 
@@ -131,10 +135,13 @@ body {
 	box-sizing: border-box;
 	position: absolute;
 	right: 0;
-	top: auto;
+	top: 50%;
+	transform: translateY(-50%);
 	padding: 6px;
 	width: 4vh;
 	height: 4vh;
+	max-width: 40px;
+	max-height: 40px;
 	border-radius: 50%;
 	color: #fff;
 	text-align: center;
@@ -294,7 +301,7 @@ header {
 	max-width: 950px;
 	opacity: 0;
 	filter: blur(5px);
-	transition: all 1.2s;
+	transition: all 1s, filter 0.5s;
 }
 
 .page .show {
